# libwikimark

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
bench/: README.md  bench_main.c
bench/inputs/: kitchen-sink.wm  plain.md  wiki-heavy.wm
include/: wikimark.h
src/: annotation.c  annotation.h  attributes.c  attributes.h  callout.c  callout.h  expand.c  expand.h  frontmatter.c  frontmatter.h  node_types.h  normalize.c  normalize.h  redirect.c  redirect.h  scanner.c  scanner.h  spans.c  spans.h  template.c  template.h  variable.c  variable.h  wikilink.c  wikilink.h  wikimark.c  wm_private.h
test_data/pages/: Main_Page.wm
test_data/templates/: ask.wm  greeting.wm  link.wm  outer.wm  toc.wm  user-card.wm
tests/fuzz/: fuzz_render.c  seed_corpus.py
tools/: test_engine.c  test_engine.h  wikimark.c
